# smvis

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO_V1.md  TODO_V2.md  TODO_V3.md  TODO_V4.md  TODO_V5.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_env.py
examples/: abs_diff.smv  bubble_sort3.smv  counter.smv  fibonacci.smv  gcd_01.smv  mult.smv  mutex.smv  request_grant.smv  swap.smv  traffic_light.smv  two_bit_counter.smv
src/nuxmv_viz/: __init__.py  __main__.py  app.py  bdd_engine.py  bdd_visualizer.py  explicit_engine.py  graph_builder.py  smv_grammar.lark  smv_parser.py
src/nuxmv_viz/assets/: style.css
src/smvis/: __init__.py  __main__.py  accepting_cycles.py  app.py  bdd_engine.py  bdd_visualizer.py  cycle_analysis.py  explicit_engine.py  graph_builder.py  ltl_buchi.py  nuxmv_runner.py  product_model.py  smv_grammar.lark  smv_model.py  smv_parser.py
src/smvis/assets/: resize.js  style.css  terminal.js  tooltip.js
tests/: conftest.py  test_app.py  test_bdd_engine.py  test_bdd_visualizer.py  test_cycle_analysis.py  test_edge_cases.py  test_explicit_engine.py  test_expression_eval.py  test_graph_builder.py  test_gui_regression.py  test_integration.py  test_ltl_buchi.py  test_nuxmv_runner.py  test_parser.py  test_product_model.py
